userroles funcional. starting on exercise.

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -37,11 +37,20 @@
                                 asp-controller="Home"
                                 asp-action="SecureArea">Secure Area</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area=""
-                                asp-controller="Role"
-                                asp-action="Index">Roles</a>
-                        </li>
+                        @if (User.IsInRole("Admin"))
+                        {
+
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area=""
+                                    asp-controller="Role"
+                                    asp-action="Index">Roles</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area=""
+                                    asp-controller="UserRole"
+                                    asp-action="Index">User Roles</a>
+                            </li>
+                        }
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
