New Repo section complete

--- a/Views/UserRole/Detail.cshtml
+++ b/Views/UserRole/Detail.cshtml
@@ -2,7 +2,7 @@
 @{
   ViewData["Title"] = "User Roles Detail";
 }
-<h3>User: @ViewBag.UserName</h3>
+<h3>User: @ViewBag.UserFirstName</h3>
 <p>
   @Html.ActionLink("Assign Roles"
       , "Create"
