--- a/Views/Role/Index.cshtml
+++ b/Views/Role/Index.cshtml
@@ -27,9 +27,10 @@
           @Html.DisplayFor(modelItem => item.RoleName)
         </td>
         <td>
-          @Html.ActionLink("Edit", "Edit", new { /* id=PK */ }) |
-          @Html.ActionLink("Details", "Details", new { /* id=PK */ }) |
-          @Html.ActionLink("Delete", "Delete", new { /* id=PK */ })
+          <a asp-action="Delete" asp-route-id="@item.Id"
+            class="btn btn-sm btn-outline-danger">
+            <i class="fas fa-trash"></i> Delete
+          </a>
         </td>
       </tr>
     }
